Creating and finishing the custom month picker. Fixing dropdown overlap bug.

--- a/OptionComponent.css
+++ b/OptionComponent.css
@@ -16,7 +16,7 @@
 }
 
 .select__box--placeholder{
-    font-size: 12px;
+    font-size: 16px;
     color: rgba(87, 87, 87, 0.76);
 }
 
